Code review corrections
Signed-off-by: clinique <gael@lhopital.org>